Fixed clipped button, improved style

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ h2 {
 }
 
 nav {
-    background-color: rgb(87, 87, 87);
+    background: linear-gradient(to right, #383c6e, #a49dff);
     display: flex;
     align-items: center;
     padding: 2rem;
@@ -44,7 +44,7 @@ nav {
 }
 
 footer {
-    background-color: rgb(87, 87, 87);
+    background: linear-gradient(to right, #383c6e, #a49dff);
     display: flex;
     align-items: center;
     padding: 2rem;
@@ -60,7 +60,7 @@ footer {
 }
 
 .left-bar, .right-bar {
-    background-color: gray;
+    background: linear-gradient(to bottom, #5f6287, #807cb7);
     width: 15vw;
     border-radius: 10px;
     margin:2px
@@ -77,7 +77,7 @@ footer {
 }
 
 .post {
-    background-color: rgb(240, 240, 240);
+    background-color: rgb(211, 213, 255);
     border-radius: 30px;
     border: solid 2px rgb(200, 200, 200);
     margin: 2rem 0 2rem 0;
@@ -192,7 +192,7 @@ section {
     flex-direction: column; 
     justify-content: space-evenly;
     align-items:flex-start;
-    background-color: rgb(226, 221, 221);
+    background-color: rgb(198, 197, 214);
     gap: 3rem;
     padding: 4rem 2rem 4rem 1rem;     
     margin: 1rem;
@@ -202,7 +202,7 @@ section {
     box-sizing: border-box;
 }
 textarea {
-    background-color: #f8f8f8;
+    background-color: #f9f9ff;
     font-size: 16px;
     resize: none;
     min-height: 12rem;
@@ -216,12 +216,15 @@ textarea {
 
 .submit{
     align-self: center;
+    margin-bottom: 1rem;
+    min-height: 2rem;
 
 }
 #submit-button{
     background-color: #1c4198; 
+    border-radius: 12px;
     color: #f8f8f8;
-    padding: 0.5rem 2rem; 
+    padding: 0rem; 
     border: none; 
     cursor: pointer;
     font-size: 1rem;
@@ -232,6 +235,7 @@ textarea {
 }
 #buttonlabel{
     font-family: Arial, Helvetica, sans-serif;
+    border-radius: 12px;
     cursor: pointer;
     display: block;
     text-align: center; /* Horisontaalne keskjoondamine */
@@ -296,8 +300,9 @@ form input{
 }
 form button{
     background-color: #1c4198; 
+    border-radius: 12px;
     color: #f8f8f8;
-    padding: 0.5rem 2rem; 
+    padding: 0.2rem 2rem; 
     border: none; 
     cursor: pointer;
     font-size: 1rem;
